compiler/testData/diagnostics/testsWithStdLib/hugeUnresolvedKotlinxHtml.fir.kt
class A {
    fun bar() {
        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                    <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                    <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                    <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                    <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                    <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                        <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                            <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                                <!UNRESOLVED_REFERENCE!>div<!> <!UNRESOLVED_REFERENCE!>{
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                }<!>
                                                                                            }<!>
                                                                                        }<!>
                                                                                    }<!>
                                                                                }<!>
                                                                            }<!>
                                                                        }<!>
                                                                    }<!>
                                                                }<!>
                                                            }<!>
                                                        }<!>

                                                    }<!>
                                                }<!>
                                            }<!>
                                        }<!>
                                    }<!>
                                }<!>
                            }<!>
                        }<!>
                    }<!>
                }<!>
            }<!>
        }<!>
    }
}
